force-app/main/default/objects/Chemical_Peel_Treatment_s__c/fields/Chemical_Peel_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Chemical_Peel_Treatment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chemical Peel Treatment</label>
    <referenceTo>Chemical_Peel_Treatment__c</referenceTo>
    <relationshipName>Chemical_Peel_Treatments</relationshipName>
    <type>Lookup</type>
</CustomField>