force-app/main/default/objects/Chemical_Peel_Treatment_s__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Face</fullName>
            </value>
            <value>
                <fullName>Forehead</fullName>
            </value>
            <value>
                <fullName>Eyes</fullName>
            </value>
            <value>
                <fullName>Cheeks</fullName>
            </value>
            <value>
                <fullName>Left Cheek</fullName>
            </value>
            <value>
                <fullName>Right Cheek</fullName>
            </value>
            <value>
                <fullName>Lips</fullName>
            </value>
            <value>
                <fullName>Chin</fullName>
            </value>
            <value>
                <fullName>Décolleté</fullName>
            </value>
            <value>
                <fullName>Chest</fullName>
            </value>
            <value>
                <fullName>Hands</fullName>
            </value>
            <value>
                <fullName>Back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>